src/test/ui/associated-types/bound-lifetime-in-return-only.elision.stderr
error[E0106]: missing lifetime specifier
  --> $DIR/bound-lifetime-in-return-only.rs:34:23
   |
LL | fn elision(_: fn() -> &i32) {
   |                       ^ expected named lifetime parameter
   |
   = help: this function's return type contains a borrowed value, but there is no value for it to be borrowed from
   = note: for more information on higher-ranked polymorphism, visit https://doc.rust-lang.org/nomicon/hrtb.html
help: consider making the type lifetime-generic with a new `'a` lifetime
   |
LL | fn elision(_: for<'a> fn() -> &'a i32) {
   |               ^^^^^^^         ^^^
help: consider using the `'static` lifetime
   |
LL | fn elision(_: fn() -> &'static i32) {
   |                       ^^^^^^^^

error: aborting due to previous error

For more information about this error, try `rustc --explain E0106`.
